# MakeCode-Arcade-to-App

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
examples/: Racers to Electron.yaml  Racers to Tauri.yaml  Racers to static files.yaml  Racers to static.yaml  Racers.yaml
src/: config.py  main.py  source.py
src/app_to_electron/: electron.py
src/config/: __init__.py  model.py
src/convert/mkcd_to_website/: config.py  source.py  website.py
src/convert/website_to_electron/: electron.py
src/convert/website_to_tauri/: tauri.py
src/mkcd2app/: __init__.py  __main__.py  _redun_compat.py  cli.py  main.py
src/mkcd2app/build_project/: __init__.py  website.py
src/mkcd2app/build_project/inputs/: code.py
src/mkcd2app/config/: __init__.py  model.py
src/mkcd2app/js_tools/: package-lock.json  package.json
src/mkcd2app/templates/vite-project/: .prettierignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/mkcd2app/utils/: logger.py  resources.py  run.py
src/mkcd_to_app/: config.py  source.py  website.py
src/templates/electron_files/: README.md  forge.config.js  package.json  webpack.main.config.js  webpack.renderer.config.js
src/templates/electron_files/src/: main.js  renderer.js
src/templates/tauri_files/: README.md
src/templates/tauri_files/src-tauri/: tauri.conf.json
src/templates/website_files/: index.html
src/utils/: cmd.py  filesystem.py  logger.py
src/website_files/: README.md  index.html  package.json
src/website_files/src/: App.tsx
(+7 files in other folders)
