[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkcd2app"
version = "0.1.0"
description = "Convert MakeCode Arcade games into static websites, Electron, or Tauri apps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "pyyaml",
    "redun",
    "requests",
    "beautifulsoup4",
    "pillow",
]

[project.scripts]
mkcd2app = "mkcd2app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mkcd2app"]
